2024/4/17 21:40 拖拽功能预实现

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -14,9 +14,99 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget"/>
-  <widget class="QMenuBar" name="menubar"/>
+  <widget class="QMenuBar" name="menubar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>800</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <widget class="QMenu" name="menu">
+    <property name="title">
+     <string>文件(&amp;F)</string>
+    </property>
+    <addaction name="ac_creatFiles"/>
+    <addaction name="separator"/>
+    <addaction name="separator"/>
+    <addaction name="ac_openFiles"/>
+    <addaction name="separator"/>
+    <addaction name="ac_saveFiles"/>
+   </widget>
+   <addaction name="menu"/>
+  </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QToolBar" name="toolBar">
+   <property name="font">
+    <font>
+     <bold>false</bold>
+    </font>
+   </property>
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <property name="movable">
+    <bool>false</bool>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="ac_openFiles"/>
+   <addaction name="separator"/>
+   <addaction name="ac_saveFiles"/>
+  </widget>
+  <action name="ac_openFiles">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/images/122.bmp</normaloff>:/images/122.bmp</iconset>
+   </property>
+   <property name="text">
+    <string>打开文件</string>
+   </property>
+   <property name="toolTip">
+    <string>打开文件</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+O</string>
+   </property>
+  </action>
+  <action name="ac_saveFiles">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/images/104.bmp</normaloff>:/images/104.bmp</iconset>
+   </property>
+   <property name="text">
+    <string>保存文件</string>
+   </property>
+   <property name="toolTip">
+    <string>保存文件</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+S</string>
+   </property>
+  </action>
+  <action name="ac_creatFiles">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/images/514.bmp</normaloff>:/images/514.bmp</iconset>
+   </property>
+   <property name="text">
+    <string>新建文件</string>
+   </property>
+   <property name="toolTip">
+    <string>新建文件</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+W</string>
+   </property>
+  </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="icons.qrc"/>
+ </resources>
  <connections/>
 </ui>
