--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -57,15 +57,6 @@
     <addaction name="ac_deleteStu"/>
     <addaction name="ac_checkStu"/>
    </widget>
-   <widget class="QMenu" name="menu_3">
-    <property name="title">
-     <string>教师</string>
-    </property>
-    <addaction name="ac_addTec"/>
-    <addaction name="separator"/>
-    <addaction name="ac_deleteTec"/>
-    <addaction name="ac_checkTec"/>
-   </widget>
    <widget class="QMenu" name="menu_4">
     <property name="title">
      <string>课程</string>
@@ -90,11 +81,13 @@
     <property name="title">
      <string>专业 班级</string>
     </property>
+    <addaction name="ac_addMajor"/>
+    <addaction name="separator"/>
+    <addaction name="ac_checkMajor"/>
    </widget>
    <addaction name="menu"/>
    <addaction name="menu_6"/>
    <addaction name="menu_4"/>
-   <addaction name="menu_3"/>
    <addaction name="menu_7"/>
    <addaction name="menu_2"/>
    <addaction name="menu_5"/>
@@ -125,7 +118,6 @@
    <addaction name="ac_Save_as"/>
    <addaction name="ac_saveFiles"/>
    <addaction name="ac_addStu"/>
-   <addaction name="ac_checkTec"/>
    <addaction name="ac_checkStu"/>
   </widget>
   <action name="ac_openFiles">
@@ -197,18 +189,6 @@
     <string>添加课程</string>
    </property>
   </action>
-  <action name="ac_addTec">
-   <property name="icon">
-    <iconset resource="icons.qrc">
-     <normaloff>:/images/200.bmp</normaloff>:/images/200.bmp</iconset>
-   </property>
-   <property name="text">
-    <string>添加老师</string>
-   </property>
-   <property name="toolTip">
-    <string>添加老师</string>
-   </property>
-  </action>
   <action name="ac_Save_as">
    <property name="icon">
     <iconset theme="applications-utilities" resource="icons.qrc">
@@ -219,18 +199,6 @@
    </property>
    <property name="toolTip">
     <string>文件另存为</string>
-   </property>
-  </action>
-  <action name="ac_deleteTec">
-   <property name="icon">
-    <iconset resource="icons.qrc">
-     <normaloff>:/images/208.bmp</normaloff>:/images/208.bmp</iconset>
-   </property>
-   <property name="text">
-    <string>删除老师</string>
-   </property>
-   <property name="toolTip">
-    <string>删除老师</string>
    </property>
   </action>
   <action name="ac_choose_school_year">
@@ -305,18 +273,6 @@
     <string>查看学生</string>
    </property>
   </action>
-  <action name="ac_checkTec">
-   <property name="icon">
-    <iconset resource="icons.qrc">
-     <normaloff>:/images/app.ico</normaloff>:/images/app.ico</iconset>
-   </property>
-   <property name="text">
-    <string>查看老师</string>
-   </property>
-   <property name="toolTip">
-    <string>查看老师</string>
-   </property>
-  </action>
   <action name="ac_checkLesson">
    <property name="icon">
     <iconset resource="icons.qrc">
@@ -327,6 +283,30 @@
    </property>
    <property name="toolTip">
     <string>查看课程</string>
+   </property>
+  </action>
+  <action name="ac_addMajor">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/images/212.bmp</normaloff>:/images/212.bmp</iconset>
+   </property>
+   <property name="text">
+    <string>添加专业班级</string>
+   </property>
+   <property name="toolTip">
+    <string>添加专业班级</string>
+   </property>
+  </action>
+  <action name="ac_checkMajor">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/images/app.ico</normaloff>:/images/app.ico</iconset>
+   </property>
+   <property name="text">
+    <string>查看专业班级</string>
+   </property>
+   <property name="toolTip">
+    <string>查看专业班级</string>
    </property>
   </action>
  </widget>
