需求整改：1. toolBar 添加 考勤 作业 实验 actions  2. 系统级目录 存放 保存配置 加载配置  3. 焦点功能打开 单击 修改内容  4. 添加模板功能 （读取信息的模板）既原表  5. 修改默认学年直接读

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -111,12 +111,14 @@
    <addaction name="ac_openFiles"/>
    <addaction name="separator"/>
    <addaction name="ac_exportExcel"/>
-   <addaction name="ac_checkMajor"/>
    <addaction name="ac_Save_as"/>
    <addaction name="ac_saveFiles"/>
-   <addaction name="ac_addStu"/>
    <addaction name="ac_saveSettings"/>
    <addaction name="ac_loadSettings"/>
+   <addaction name="separator"/>
+   <addaction name="ac_checkMajor"/>
+   <addaction name="separator"/>
+   <addaction name="ac_addStu"/>
   </widget>
   <action name="ac_openFiles">
    <property name="icon">
