--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -44,7 +44,7 @@
        <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <property name="elideMode">
        <enum>Qt::ElideNone</enum>
@@ -170,9 +170,18 @@
     <addaction name="ac_experimentScore"/>
     <addaction name="ac_Attendance"/>
    </widget>
+   <widget class="QMenu" name="menu_4">
+    <property name="title">
+     <string>关于</string>
+    </property>
+    <addaction name="ac_v_Info"/>
+    <addaction name="separator"/>
+    <addaction name="ac_template"/>
+   </widget>
    <addaction name="menu"/>
    <addaction name="menu_3"/>
    <addaction name="menu_2"/>
+   <addaction name="menu_4"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QToolBar" name="toolBar">
@@ -202,6 +211,7 @@
    <addaction name="ac_loadSettings"/>
    <addaction name="separator"/>
    <addaction name="ac_toallSocre"/>
+   <addaction name="ac_final_overall"/>
    <addaction name="ac_Attendance"/>
    <addaction name="ac_homework"/>
    <addaction name="ac_experimentScore"/>
@@ -264,18 +274,6 @@
    </property>
    <property name="toolTip">
     <string>添加学生</string>
-   </property>
-  </action>
-  <action name="ac_addLesson">
-   <property name="icon">
-    <iconset resource="icons.qrc">
-     <normaloff>:/images/718.bmp</normaloff>:/images/718.bmp</iconset>
-   </property>
-   <property name="text">
-    <string>添加课程</string>
-   </property>
-   <property name="toolTip">
-    <string>添加课程</string>
    </property>
   </action>
   <action name="ac_choose_school_year">
@@ -420,6 +418,43 @@
    </property>
    <property name="toolTip">
     <string>平时成绩汇总表</string>
+   </property>
+   <property name="menuRole">
+    <enum>QAction::NoRole</enum>
+   </property>
+  </action>
+  <action name="ac_final_overall">
+   <property name="icon">
+    <iconset theme="battery" resource="icons.qrc">
+     <normaloff>:/images/winIcon.jpg</normaloff>:/images/winIcon.jpg</iconset>
+   </property>
+   <property name="text">
+    <string>期末总评成绩</string>
+   </property>
+   <property name="toolTip">
+    <string>期末总评成绩</string>
+   </property>
+   <property name="menuRole">
+    <enum>QAction::NoRole</enum>
+   </property>
+  </action>
+  <action name="ac_v_Info">
+   <property name="text">
+    <string>版本信息</string>
+   </property>
+   <property name="toolTip">
+    <string>版本信息</string>
+   </property>
+   <property name="menuRole">
+    <enum>QAction::NoRole</enum>
+   </property>
+  </action>
+  <action name="ac_template">
+   <property name="text">
+    <string>模板规范</string>
+   </property>
+   <property name="toolTip">
+    <string>模板规范</string>
    </property>
    <property name="menuRole">
     <enum>QAction::NoRole</enum>
